# setscout

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  app.py  environment.yml  pyproject.toml  requirements.txt  run_app.sh
docs/adr/: 0001-stream-typed-run-events.md  0002-custom-presentation-inside-gradio.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
notebooks/: setscout_prototype.ipynb
prototypes/gradio-ui-execution/: README.md  gallery.html  index.html
scripts/: run_gradio_ui_prototype.sh  run_pipeline_once.py
setscout/: README.md  __init__.py  pipeline.py  runs.py  tracing.py
setscout/graph/: __init__.py  builder.py  state.py
setscout/graph/nodes/: decomposer.py  evaluator.py  extractor.py  gather_evidence.py  issue_hunter.py  llm.py  reporter.py  scorer.py  searcher.py
setscout/models/: __init__.py  schemas.py
setscout/tools/: __init__.py  async_utils.py  documents.py  enrichment.py  prompt_context.py  search.py
tests/: test_evaluator.py  test_runs.py  test_search.py
